# analisis_lecciones_2025

./: .Rhistory  analisis.R  comunas_problema.txt  main.py  ordenar_servel.py  pyproject.toml  todos_los_datos.csv
datos/: primera_vuelta.csv  segunda_vuelta.csv
ptm/: alto_del_carmen_ptm.csv  angol_ptm.csv  antofagasta_ptm.csv  antuco_ptm.csv  buin_ptm.csv  caldera_ptm.csv  calera_de_tango_ptm.csv  calera_ptm.csv  calle_larga_ptm.csv  canela_ptm.csv  cañete_ptm.csv  cerro_navia_ptm.csv  chaiten_ptm.csv  chanco_ptm.csv  chile_chico_ptm.csv  cholchol_ptm.csv  codegua_ptm.csv  coinco_ptm.csv  colina_ptm.csv  concon_ptm.csv  constitucion_ptm.csv  contulmo_ptm.csv  coquimbo_ptm.csv  coyhaique_ptm.csv  cunco_ptm.csv  curacautin_ptm.csv  curanilahue_ptm.csv  curico_ptm.csv  diego_de_almagro_ptm.csv  doñihue_ptm.csv  el_bosque_ptm.csv  empedrado_ptm.csv  estacion_central_ptm.csv  graneros_ptm.csv  hijuelas_ptm.csv  hualaihue_ptm.csv  hualqui_ptm.csv  huara_ptm.csv  illapel_ptm.csv  iquique_ptm.csv  (+84 more)
vtm/: .~lock.alto_hospicio_vtm.csv#  alto_biobio_vtm.csv  alto_hospicio_vtm.csv  ancud_vtm.csv  angol_vtm.csv  antuco_vtm.csv  arauco_vtm.csv  aysen_vtm.csv  cabrero_vtm.csv  calama_vtm.csv  caldera_vtm.csv  calera_de_tango_vtm.csv  calera_vtm.csv  canela_vtm.csv  casablanca_vtm.csv  castro_vtm.csv  catemu_vtm.csv  cauquenes_vtm.csv  cerrillos_vtm.csv  chepica_vtm.csv  chile_chico_vtm.csv  cholchol_vtm.csv  chonchi_vtm.csv  cisnes_vtm.csv  cochrane_vtm.csv  colbun_vtm.csv  combarbala_vtm.csv  concon_vtm.csv  constitucion_vtm.csv  contulmo_vtm.csv  copiapo_vtm.csv  coyhaique_vtm.csv  (+98 more)
(+309 files in other folders)
